--- a/RetroTechLanding/Views/Home/Index.cshtml
+++ b/RetroTechLanding/Views/Home/Index.cshtml
@@ -3,31 +3,41 @@
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
-
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
-    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="https://th.bing.com/th/id/OIP.7GRx9ecSEpghApvyj3P5wgHaHa?pid=ImgDet&rs=1" class="img-fluid" alt="Large Image">
+                    <h1 class="text-center">@ViewBag.CompanyName</h1>
+                    <h6 class="text-center">We serve for your tech life</h6>
+                </div>
+            </div>
+            <br />
+            @*Show the navigations using cards*@ 
+        <div class="row">
+            <div class="col">
+                <a href="/home/services">
+                    <div class="card p-2 text-center">
+                        <h3>Know Our Team Members</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a href="/home/services">
+                    <div class="card p-2 text-center">
+                        <h3>Explore Our Services</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+            <br />
+        <div class="row">
+            <div class="col">
+                <a href="/home/services">
+                    <div class="card p-2 text-center">
+                        <h3>Contact Us</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+        </div>
 </main>
