--- a/RetroTechLanding/Views/Home/Index.cshtml
+++ b/RetroTechLanding/Views/Home/Index.cshtml
@@ -6,16 +6,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <img src="https://th.bing.com/th/id/OIP.7GRx9ecSEpghApvyj3P5wgHaHa?pid=ImgDet&rs=1" class="img-fluid" alt="Large Image">
+                    <div class="text-center">                   
+                        <img src="https://th.bing.com/th/id/OIP.7GRx9ecSEpghApvyj3P5wgHaHa?pid=ImgDet&rs=1" class="img-fluid" alt="Large Image">
+                    </div>
+
                     <h1 class="text-center">@ViewBag.CompanyName</h1>
                     <h6 class="text-center">We serve for your tech life</h6>
                 </div>
             </div>
-            <br />
-            @*Show the navigations using cards*@ 
+        <br />
+        @*Show the navigations using cards*@
         <div class="row">
             <div class="col">
-                <a href="/home/services">
+                <a href="/home/terms_mems">
                     <div class="card p-2 text-center">
                         <h3>Know Our Team Members</h3>
                     </div>
@@ -29,10 +32,10 @@
                 </a>
             </div>
         </div>
-            <br />
+        <br />
         <div class="row">
             <div class="col">
-                <a href="/home/services">
+                <a href="/home/contact">
                     <div class="card p-2 text-center">
                         <h3>Contact Us</h3>
                     </div>
