Separate the Contact to a different controller

--- a/RetroTechLanding/Views/Shared/_Layout.cshtml
+++ b/RetroTechLanding/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Services", "Services", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Terms & Members", "Terms_Mems", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Contact", "Index", "Contact", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
