--- a/RetroTechLanding/Views/Home/Index.cshtml
+++ b/RetroTechLanding/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
         <br />
         <div class="row">
             <div class="col">
-                <a href="/home/contact">
+                <a href="/contact">
                     <div class="card p-2 text-center">
                         <h3>Contact Us</h3>
                     </div>
