--- a/RegistrationValidation/Views/Home/Index.cshtml
+++ b/RegistrationValidation/Views/Home/Index.cshtml
@@ -1,27 +1,65 @@
 ﻿@{
-    ViewBag.Title = "Sign Up";
+    ViewBag.Title = "Sign Up Form";
+
+    bool CheckGender(string gender)
+    {
+        if (Model != null && Model.Gender != null && Model.Gender.Equals(gender))
+        {
+            return true;
+        }
+        return false;
+    }
+
+    bool CheckProfession(string profession)
+    {
+        if (Model != null && Model.Profession != null)
+        {
+            foreach (var h in Model.Profession)
+            {
+                if (h.Equals(profession)) return true;
+            }
+        }
+        return false;
+    }
+
+
 }
 
 <main>
     <section>
         <div class="container">
+            <h1 class="text-center">@ViewBag.Title</h1>
             <form method="post">
+                <label>Your Name</label>
                 <input type="text" name="Name" class="form-control" value="@(Model != null ? Model.Name :"" )" placeholder="Name" />
                 <span class="text-danger">@Html.ValidationMessage("Name")</span>
                 <br />
+                <label>Username</label>
                 <input type="text" name="Username" class="form-control" value="@(Model != null ? Model.Username : "")" placeholder="User Name" />
                 <span class="text-danger">@Html.ValidationMessage("Username")</span>
                 <br />
-                <label>Gender</label>
-                <input type="radio" checked="" name="Gender" value="Male" /> <label>Male</label>
-                <input type="radio" checked="" name="Gender" value="Female" /> <label>Female</label>
+                <label><b>Gender</b></label>
+                <input type="radio" checked="@CheckGender("Male")" name="Gender" value="Male" /> <label>Male</label>
+                <input type="radio" checked="@CheckGender("Female")" name="Gender" value="Female" /> <label>Female</label>
                 <span class="text-danger">@Html.ValidationMessage("Gender")</span>
                 <br />
-                <label>Profession</label>
-                <input type="checkbox" checked="" name="Profession[]" value="Student" /> <label>Student</label>
-                <input type="checkbox" checked="" name="Profession[]" value="Developer" /> <label>Developer</label>
-                <input type="checkbox" checked="" name="Profession[]" value="Manager" /> <label>Manager</label>
+                <label><b>Profession</b></label>
+                <input type="checkbox" checked="@CheckProfession("Student")" name="Profession[]" value="Student" /> <label>Student</label>
+                <input type="checkbox" checked="@CheckProfession("Developer")" name="Profession[]" value="Developer" /> <label>Developer</label>
+                <input type="checkbox" checked="@CheckProfession("Manager")" name="Profession[]" value="Manager" /> <label>Manager</label>
                 <span class="text-danger">@Html.ValidationMessage("Profession")</span>
+                <br />
+                <label><b>Date of Birth</b></label>
+                <input type="date" name="Dob" value="@(Model != null ? Model.Dob.Date.ToString("yyyy-MM-dd") : "")" />
+                <span class="text-danger">@Html.ValidationMessage("Dob")</span>
+                <br />
+                <label>Student ID</label>
+                <input type="text" name="StudentId" class="form-control" value="" placeholder="Student ID" />
+                <span class="text-danger">@Html.ValidationMessage("StudentId")</span>
+                <br />
+                <label>Email Address</label>
+                <input type="email" name="Email" value="" class="form-control" placeholder="Email Address" />
+                <span class="text-danger">@Html.ValidationMessage("Email")</span>
 
                 <br />
                 <input type="submit" class="btn btn-success" />
